# opendoor

./: README.md  build_exe.py  main.py  pyproject.toml  setup.py
opendoor/: __init__.py  __main__.py
opendoor/api/: base.py  gemini.py  ollama.py
opendoor/commands/: commands.py
opendoor/core/: app.py  coder.py
opendoor/engine/: extractor.py  performance_core.cpp
opendoor/io_layer/: io.py
opendoor/session/: session.py
opendoor/ui/: terminal.py
